# llm-as-a-teacher

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  evaluator.py  file_parser.py  git_handler.py  main.py  pyproject.toml  run.sh
